--- a/reducer-todo/src/index.css
+++ b/reducer-todo/src/index.css
@@ -1,12 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
   background-image: linear-gradient(
       to left,
       rgba(255, 255, 255, 0.5),
@@ -17,7 +16,41 @@ body {
   background-size: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+p,
+span {
+  font-family: "Roboto", sans-serif;
+}
+
+.task {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(0, 0, 0, 0.2);
+  padding: 2%;
+  border: 1px solid black;
+  width: 300px;
+  border-radius: 5px;
+  margin: 2%;
+  cursor: pointer;
+}
+
+.task.completed {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2%;
+  border: 1px solid black;
+  width: 300px;
+  border-radius: 5px;
+  background: rgb(0, 0, 0, 0.3);
+  text-decoration: line-through;
+  margin: 2%;
+  cursor: pointer;
 }
